# Roomba980-Python

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  ca-certificates.crt  example_start_roomba  getpassword.py  pyproject.toml  requirements.txt  requirements_all.txt  requirements_test.txt  roomba.py  roomba_map.html  setup.py  start_openhab_roomba  style.css
.github/workflows/: ci.yaml  release.yaml
examples/: complicated.py  simple.py
openhab/html/: style.css
openhab/items/: roomba.items
openhab/sitemaps/: roomba.sitemap
openhab/things/: roomba.things
openhab/transform/: inverse_switch.map  switch.map  switchFromMqtt.map
roomba/: __init__.py  __main__.py  config_example.ini  const.py  discovery.py  entry_points.py  getcloudpassword.py  getpassword.py  iRobot.crt  initwifi.py  mqttclient.py  password.py  replay_log.py  roomba.py  roomba_cleaned.py  roomba_direct.py  test.py  web_server.py
roomba/views/: map.html  map_orig.html
roomba/views/css/: style.css
roomba/views/js/: map.js
roombapy/: __init__.py  const.py  discovery.py  entry_points.py  getpassword.py  mqttclient.py  remote_client.py  roomba.py  roomba_factory.py  roomba_info.py
script/: setup
tests/: abstract_test_roomba.py  passwd  test.crt  test.key  test_discovery.py  test_roomba.py  test_roomba_integration.py  test_roombapy.py  test_roombapy_integration.py
