[tool.poetry]
name = "roombapy"
version = "1.6.1"
description = "Python program and library to control Wi-Fi enabled iRobot Roombas"
authors = ["Philipp Schmitt <philipp@schmitt.co>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
paho-mqtt = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
hbmqtt = "^0.9.6"
pytest-asyncio = "^0.14.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
