[tool.poetry]
name = "roombapy"
version = "1.6.2-1"
description = "Python program and library to control Wi-Fi enabled iRobot Roombas"
authors = ["Philipp Schmitt <philipp@schmitt.co>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/pschmitt/roombapy"
classifiers = [
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking"
]
exclude = ["tests/*"]

[tool.poetry.scripts]
roomba-connect = "roombapy.entry_points:connect"
roomba-discovery = "roombapy.entry_points:discovery"
roomba-password = "roombapy.entry_points:password"

[tool.poetry.dependencies]
python = ">=3.7"
paho-mqtt = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
hbmqtt = "^0.9.6"
pytest-asyncio = "^0.14.0"
black = "^20.8b1"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
